--- a/control_inventario/templates/ingreso_cabecera/crear_ingreso_cabecera.html
+++ b/control_inventario/templates/ingreso_cabecera/crear_ingreso_cabecera.html
@@ -14,7 +14,7 @@
     <form class="text-center py-lg-3 " method="post">
 
         {% csrf_token %}
-        {{ ingreso_cabecera.as_p }}
+        {{ ingreso_cabecera_ls.as_p }}
         <input type="submit" value="Guardar Datos"/>
     </form>
 
