--- a/control_inventario/templates/ingreso_cabecera/modificar_ingreso_cabecera.html
+++ b/control_inventario/templates/ingreso_cabecera/modificar_ingreso_cabecera.html
@@ -13,7 +13,7 @@
 
     <form class="text-center" method="post">
         {% csrf_token %}
-        {{ ingreso_cabeceraForm.as_p }}
+        {{ ingreso_cabecera_ls.as_p }}
         <input type="submit" value="Modificar Datos"/>
     </form>
 
