--- a/control_inventario/templates/ingreso_cabecera/eliminar_ingreso_cabecera.html
+++ b/control_inventario/templates/ingreso_cabecera/eliminar_ingreso_cabecera.html
@@ -15,7 +15,7 @@
 
     <form class="text-center py-lg-3 " method="post">
         {% csrf_token %}
-        {{ ingreso_cabeceraForm.as_p }}
+        {{ ingreso_cabecera_ls.as_p }}
         <input type="submit" value="Eliminar Ingreso Cabecera"/>
     </form>
 
